# bookstore

./: pyproject.toml
.github/workflows/: main.yml  workflow-pr.yml
bookstore/: docker-compose.yml  pyproject.toml
bookstore/.github/workflows/: build.yml
bookstore/bookstore/: settings.py  urls.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/test_viewsets/: test_order_viewset.py
bookstore/product/: factories.py
bookstore/product/migrations/: 0001_initial.py  0002_rename_create_product_active_and_more.py
bookstore/product/models/: category.py  product.py
bookstore/product/serializers/: __init__.py  category_serializers.py  product_serializer.py
bookstore/product/tests/test_viewsets/: test_product_viewset.py
