[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "CaioSPaiva",email = "caiopaiva134@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
